# baxter_ws_windows

./: LICENSE  README.md  baxter.sh
Baxter_Station_Windows/: README.md  docker-compose.yml  git_setup.bat  setup.bat  start_moveit.bat  stop_all.bat  test_baxter.bat
Baxter_Station_Windows/baxter_ros1/: Dockerfile
Baxter_Station_Windows/bridge/: Dockerfile
Baxter_Station_Windows/moveit_ros2/: Dockerfile
Baxter_Station_Windows/shared_ws/: simple_baxter_control.py
devel/: .catkin  .rosinstall  setup.sh
devel/include/baxter_core_msgs/: AnalogIOState.h  AnalogIOStates.h  AnalogOutputCommand.h  AssemblyState.h  AssemblyStates.h  CameraControl.h  CameraSettings.h  CloseCameraRequest.h  CloseCameraResponse.h  CollisionAvoidanceState.h  CollisionDetectionState.h  DigitalIOState.h  DigitalIOStates.h  DigitalOutputCommand.h  EndEffectorCommand.h  EndEffectorProperties.h  EndEffectorState.h  EndpointState.h  EndpointStates.h  HeadPanCommand.h  HeadState.h  JointCommand.h  ListCamerasRequest.h  ListCamerasResponse.h  NavigatorState.h  NavigatorStates.h  OpenCameraRequest.h  OpenCameraResponse.h  RobustControllerStatus.h  SEAJointState.h  SolvePositionIKRequest.h  SolvePositionIKResponse.h  URDFConfiguration.h
devel/include/baxter_maintenance_msgs/: CalibrateArmData.h  CalibrateArmEnable.h  TareData.h  TareEnable.h  UpdateSource.h  UpdateSources.h  UpdateStatus.h
src/: .rosinstall  Baxter_Docker
src/fort_lewis_demo/: CMakeLists.txt
src/fort_lewis_demo/scripts/: baxter_demo_main.py  baxter_demo_setup.py  baxter_demo_utils.py  baxter_face_expressions.py
(+52 files in other folders)
